--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "axios": "^1.5.1",
     "flowbite": "^1.8.1",
     "git": "^0.1.5",
     "pinia": "^2.1.6",
